# teemup

./: LICENSE  README.md  pyproject.toml  teemup.py  test_teemup.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
test_fixtures/: next_state_missing_venue.json  next_state_online_venue.json  response_content.html
