[tool.poetry]
name = "teemup"
version = "1.0.1"
description = "If Meetup didn't become a walled garden, the world wouldn't need Teemup"
authors = ["Honza Javorek <mail@honzajavorek.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
lxml = "4.9.3"
cssselect = "1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
black = "23.10.1"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "."
addopts = "-v --doctest-glob=README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
